--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,22 @@
   padding-bottom: 10px;
   
 }
+
+.display{
+  display:flex;
+  justify-content:space-between;
+  z-index: 1;
+  flex-wrap:wrap;
+  padding-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+}
+.displaycard{
+  width:45%;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.heading{
+  text-align: center;
+}
