--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,28 @@
   width:45%;
   padding-left: 10px;
   padding-bottom: 10px;
+  padding-right: 10px;
 }
 .heading{
   text-align: center;
+}
+.details{
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width:60%;
+padding-top: 10%;
+}
+.artdetails{
+  padding-top: 3%;
+  line-height: 2;
+  padding-bottom: 2%;
+
+}
+.image{
+  padding-top: 2%;
+  padding-left: 4%;
+  justify-content: center;
+  align-items: center;
+  /* padding-bottom: 2%; */
 }
